# state-observation

./: .clang-format-common.sh  .cmake-format.yaml  .gitignore  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  _config.yml  flake.nix  index.html
.github/workflows/: build.yml  nix.yml  package.yml
.github/workflows/sources/: package.yml
benchmarks/: CMakeLists.txt  bench-covMultSpeed.cpp
cmake/: config-components.cmake.in  get-jrl-cmakemodules.cmake
debian/: changelog  control  copyright  libstate-observation-dev.install  libstate-observation-doc.doc-base  libstate-observation-doc.install  libstate-observation.install  rules
doc/: 1-Overview.md  2-Installing.md  CMakeLists.txt
doc/pages/: biblio.bib  dcm-bias-estimator.html  dcm-bias-estimator.lyx  pages.dox
doxygen/HEAD/: README_8md.html  a00002.html  a00005.html  a00008.html  a00011.html  a00014.html  a00017.html  a00020.html  a00023.html  a00026.html  a00026.js  a00029.html  a00029.js  a00032.html  a00032.js  a00035.html  a00035.js  a00038.html  a00038.js  a00041.html  a00044.html  a00047.html  a00050.html  a00053.html  a00056.html  a00059.html  a00062.html  a00065.html  a00068.html  a00071.html  a00074.html  a00077.html  a00080.html  a00083.html  a00086.html  a00089.html  a00092.html  a00095.html  a00098.html  a00101.html  (+1540 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+123 more)
include/state-observation/: config.h.in
include/state-observation/dynamical-system/: dynamical-system-functor-base.hpp  imu-dynamical-system.hpp
include/state-observation/dynamics-estimators/: kinetics-observer.hpp  kinetics-observer.hxx  lipm-dcm-estimator.hpp  zmp-tracking-gain-estimator.hpp
include/state-observation/examples/: imu-attitude-trajectory-reconstruction.hpp  imu-attitude-trajectory-reconstruction.hxx  imu-multiplicative-attitude-reconstruction.hxx  offline-ekf-flexibility-estimation.hxx  offline-model-base-flex-estimation.hxx
include/state-observation/flexibility-estimation/: model-base-ekf-flex-estimator-imu.hpp
include/state-observation/observer/: delayed-measurements-observer.hpp  kalman-filter-base.hpp  observer-base.hpp  tilt-estimator-humanoid.hpp  tilt-estimator.hpp  vanyt-estimator.hpp  waiko-humanoid.hpp  zero-delay-observer.hpp
include/state-observation/sensors-simulation/: accelerometer-gyrometer.hpp
include/state-observation/tools/: definitions.hpp  definitions.hxx  hrp2.hpp  logger.hxx  probability-law-simulation.hpp  probability-law-simulation.hxx  rigid-body-kinematics.hpp  rigid-body-kinematics.hxx
include/state-observation/tools/measurements-manager/: Contact.hpp  ContactsManager.hpp  ContactsManager.hxx  IMU.hpp  Sensor.hpp
include/state-observation/tools/odometry/: legged-odometry-manager.hpp  legged-odometry-manager.hxx
misc-tools/: IMU-Observation-tester.cpp  file-splitter.cpp  model-base-flex-estimator-file-tester.cpp  zmpEstimation.cpp
src/: CMakeLists.txt  accelerometer-gyrometer.cpp  ekf-flexibility-estimator-base.cpp  extended-kalman-filter.cpp  gaussian-white-noise.cpp  imu-dynamical-system.cpp  imu-elastic-local-frame-dynamical-system.cpp  imu-mltpctive-dynamical-system.cpp  kalman-filter-base.cpp  kinetics-observer.cpp  legged-odometry-manager.cpp  linear-kalman-filter.cpp  lipm-dcm-estimator.cpp  model-base-ekf-flex-estimator-imu.cpp  observer-base.cpp  probability-law-simulation.cpp  tilt-estimator-humanoid.cpp  tilt-estimator.cpp  vanyt-estimator.cpp  waiko-humanoid.cpp  waiko.cpp  zero-delay-observer.cpp  zmp-tracking-gain-estimator.cpp
unit-testings/: CMakeLists.txt  flex-estimation-test.cpp  imu-multiplicative-test.cpp  imu-test.cpp  other-tests.cpp  test-analytical-jacobians.cpp  test-dcm-bias-estimation.cpp  test-kalman-filter.cpp  test-kinematics.cpp  test-kinetics-observer.cpp  test-legged-odometry.cpp  test-local-kinematics.cpp  test-runge-kutta.cpp  test-waiko.cpp  test_model-base-ekf-flex-estimator-imu.cpp  tools.hxx
utils/: build_and_install-windows.sh
